deployments/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learning-hub
  labels:
    app: learning-hub
spec:
  replicas: 2
  selector:
    matchLabels:
      app: learning-hub
  template:
    metadata:
      labels:
        app: learning-hub
    spec:
      containers:
      - name: learning-hub
        image: skylabworld/learning-hub
        ports:
        - containerPort: 8080
